adjusted year progress layout