@@ -1,18 +1,16 @@
 package com.sengami.gui_statistics.view.list.converter;
 
+import com.annimon.stream.Collectors;
 import com.annimon.stream.Stream;
 import com.sengami.domain_base.model.Statistics;
-import com.sengami.gui_statistics.R;
 import com.sengami.gui_statistics.view.list.element.StatisticsListElement;
 import com.sengami.gui_statistics.view.list.element.StatisticsListEmptyStateElement;
-import com.sengami.gui_statistics.view.list.element.StatisticsListTextWithNumberElement;
+import com.sengami.gui_statistics.view.list.element.StatisticsListOtherStatisticsElement;
 import com.sengami.gui_statistics.view.list.element.StatisticsListYearProgressElement;
 import com.sengami.recycler_view_adapter.converter.ElementConverter;
 
 import org.jetbrains.annotations.NotNull;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -25,21 +23,13 @@ public final class StatisticsListElementConverter implements ElementConverter<St
             return Collections.singletonList(new StatisticsListEmptyStateElement());
         }
 
-        final List<StatisticsListYearProgressElement> yearProgressElements = Stream
+        final List<StatisticsListElement> list = Stream
             .of(statistics.getEntryDatesGroupedByYears())
             .map(entry -> new StatisticsListYearProgressElement(entry.getKey(), entry.getValue()))
-            .toList();
+            .collect(Collectors.toList());
 
-        final List<StatisticsListTextWithNumberElement> textWithNumbersStatisticsElements = Arrays.asList(
-            new StatisticsListTextWithNumberElement(R.string.statistic_total_entries, String.valueOf(statistics.getTotalEntries())),
-            new StatisticsListTextWithNumberElement(R.string.statistic_year_with_most_entries, String.valueOf(statistics.getYearWithMostEntries())),
-            new StatisticsListTextWithNumberElement(R.string.statistic_longest_entry_character_count, String.valueOf(statistics.getLongestEntryCharacterCount())),
-            new StatisticsListTextWithNumberElement(R.string.statistic_average_entries_per_day, String.valueOf(statistics.getAverageEntriesPerDay()))
-        );
+        list.add(new StatisticsListOtherStatisticsElement(statistics));
 
-        final List<StatisticsListElement> results = new ArrayList<>();
-        results.addAll(yearProgressElements);
-        results.addAll(textWithNumbersStatisticsElements);
-        return results;
+        return list;
     }
 }
